<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.PickSeatsActivity">

    <NumberPicker
        android:id="@+id/numberPicker"
        style="material3picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/leftButton"
        app:layout_constraintEnd_toStartOf="@+id/leftButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/leftButton" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/leftButton"

        style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_baseline_arrow_left_24"
        app:layout_constraintBottom_toBottomOf="@+id/seatLetterTextView"
        app:layout_constraintEnd_toStartOf="@+id/seatLetterTextView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/numberPicker"
        app:layout_constraintTop_toTopOf="@+id/seatLetterTextView" />

    <TextView
        android:id="@+id/seatLetterTextView"
        style="@style/TextAppearance.Material3.TitleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="@+id/rightButton"
        app:layout_constraintEnd_toStartOf="@+id/rightButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/leftButton"
        app:layout_constraintTop_toTopOf="@+id/rightButton"
        tools:text="A" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/rightButton"
        style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_baseline_arrow_right_24"
        app:layout_constraintBottom_toTopOf="@+id/submitSeatsButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/seatLetterTextView"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/submitSeatsButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/rowTextView"
        style="@style/TextAppearance.Material3.TitleMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/row"
        app:layout_constraintBottom_toTopOf="@+id/numberPicker"
        app:layout_constraintEnd_toEndOf="@+id/numberPicker"
        app:layout_constraintStart_toStartOf="@+id/numberPicker" />

    <TextView
        android:id="@+id/chairTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chair"
        style="@style/TextAppearance.Material3.TitleMedium"
        app:layout_constraintBottom_toTopOf="@+id/numberPicker"
        app:layout_constraintEnd_toEndOf="@+id/rightButton"
        app:layout_constraintStart_toStartOf="@+id/leftButton"
        app:layout_constraintTop_toTopOf="@+id/rowTextView" />


</androidx.constraintlayout.widget.ConstraintLayout>